bin/debug/log.txt
main.cpp:9:5: error: use of undeclared identifier 'asdfassdfsdfdsfdssdfs'
    9 |     asdfassdfsdfdsfdssdfs
      |     ^
1 error generated.
